# libconsole

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conio.cpp  conio.h  main.cpp  menu.cpp  menu.h  options  options.cpp  options.h  platform.h  vcpkg-configuration.json  vcpkg.json
cmake/: CMakeCPack.cmake  Config.cmake.in  Doxyfile.in  build_flags.cmake  cmake_flags.cmake  config.cmake.in  cpack_.cmake  cpack_archive.cmake  cpack_deb.cmake  cpack_nsis.cmake  cpack_rpm.cmake  dependencies.cmake  dependencies.cmake.in  doxyfile.in  gen_files.cmake  googletest-download.cmake  googletest.cmake  install.cmake  strip_symboles.cmake  version.cpp.in  version.h.in
docs/: CMakeLists.txt  front_page.md
src/: CMakeLists.txt  conio.cpp  conio.h  console.h  endian.h  hexa.cpp  hexa.h  init.cpp  init.h  manipulator.h  menu.cpp  menu.h  options.cpp  options.h  platform.h  read.cpp  read.h
src/libconsole/: CMakeLists.txt  _endian.h  hexa.cpp  hexa.h  init.cpp  init.h  manipulator.h  menu.h  options.h  read.cpp  read.h
tests/: CMakeLists.txt  main.cpp  options.cpp
